# stock-portfolio-ai

./: .env.example  .gitignore  BUILD_LOG_FUNDAMENTAL_ANALYST_AGENT.md  BUILD_LOG_GATEWAY_SCRAPERS.md  BUILD_LOG_MARKET_DATA_AGENT.md  PROJECT_NOTES.md  README.md  ROADMAP.md  pyproject.toml
build_logs/: 2026-05-13_progress.md  fundamental_analyst_agent.md  gateway_scrapers_and_index_ui.md  market_data_agent.md  portfolio_ingestion_and_dashboard_progress.md  sentiment_analyst_agent.md  single_stock_research_view.md  supervisor_agent.md  technical_analyst_agent.md
config/: openrouter_models.json
data/: sector_overrides.csv
docs/: DATA_MODEL.md
gateway/: Cargo.toml  PROMPT.md
gateway/src/: lib.rs  main.rs
gateway/templates/: base.html  index.html  index_detail.html  index_detail_fragment.html  index_results_fragment.html  portfolio.html  portfolio_breakdown_row.html  portfolio_dashboard_fragment.html  portfolio_tab_content_fragment.html  research_conclusion_fragment.html  research_error_fragment.html  research_loading_fragment.html  research_market_fragment.html  research_report_fragment.html  settings.html  settings_fragment.html  stock_detail.html  stock_detail_fragment.html  stock_row.html  stock_rows_fragment.html  stock_search_results_fragment.html
src/stock_portfolio_ai/: __init__.py  config.py  reports.py
src/stock_portfolio_ai/agents/: __init__.py  market_data_agent.py  (+4 more)
tests/: test_fundamental_analyst_agent.py  test_market_data_agent.py  test_reports.py  test_sentiment_analyst_agent.py  test_supervisor_agent.py  test_technical_analyst_agent.py
