[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
anyhow = "1.0"
itertools = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
